# sml-test

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  requirements-dev.txt  setup.cfg  tox.ini
sml_test/: cli.py  main.py
tests/: conftest.py  test_integration.py
