[metadata]
name = sml_test
version = 1.1.1
description = The CLI tool to recursively run all SML tests in a directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lancelote/sml-test
author = Pavel Karateev
author_email = lancelote.du.lac@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    importlib-metadata;python_version<"3.8"
python_requires = >=3.8

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    sml-test = sml_test.cli:cli

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
exclude = build

[mypy-sml_test.*]
disallow_untyped_defs = true

[mypy-tests.*]
disallow_untyped_defs = false
